# micras_simulation

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yaml  format.sh  package.xml  plot_config.xml
cfg/: target.cpp  target.hpp
cmake/: build_type.cmake
config/: constants.hpp  target.cpp  target.hpp
docker/: Dockerfile  ros_entrypoint.sh
gazebo/: gui.config
gazebo/meshes/: base_link.stl  wheel.stl
gazebo/micras_plugin/: CMakeLists.txt  MicrasArgb.qml  MicrasBattery.qml  MicrasButton.qml  MicrasBuzzer.qml  MicrasDipSwitch.qml  MicrasFan.qml  MicrasFanBar.qml  MicrasLed.qml  MicrasPlugin.cc  MicrasPlugin.config  MicrasPlugin.cpp  MicrasPlugin.hh  MicrasPlugin.hpp  MicrasPlugin.qml  MicrasPlugin.qrc
gazebo/models/: diff_drive.sdf  robot.sdf
gazebo/worlds/: maze.sdf
include/micras/hal/: timer.hpp
include/micras/proxy/: argb.hpp  battery.hpp  bluetooth_serial.hpp  button.hpp  buzzer.hpp  dip_switch.hpp  distance_sensors.hpp  fan.hpp  imu.hpp  led.hpp  locomotion.hpp  motor.hpp  odometry.hpp  rotary_sensor.hpp  serializable.hpp  stopwatch.hpp  storage.hpp  torque_sensors.hpp  wall_sensors.hpp
include/micras_simulation/: micras_node.hpp
include/micras_simulation/proxy/: argb.hpp  battery.hpp  button.hpp  buzzer.hpp  dip_switch.hpp  distance_sensor.hpp  distance_sensors.hpp  encoder.hpp  fan.hpp  imu.hpp  led.hpp  locomotion.hpp  odometry.hpp  rotary_sensor.hpp  storage.hpp  torque_sensor.hpp  torque_sensors.hpp
launch/: micras.launch  micras.launch.xml  mujoco_micras.launch.xml  ros_gz_bridge.yaml
launch/include/: mujoco_world.launch.xml  node.launch.xml  ros_gz_bridge.yaml  world.launch.xml
mujoco/: gen_maze.py
mujoco/model/: car.xml  gen_maze.py  maze.stl  maze.xml  robot.xml
mujoco/models/: gen_maze.py  maze.xml  robot.xml
scripts/: pause_gazebo.py
src/: micras_node.cpp
src/hal/: timer.cpp
src/lib/: argb.cpp  battery.cpp  button.cpp  buzzer.cpp  dip_switch.cpp  distance_sensor.cpp  distance_sensors.cpp  encoder.cpp  fan.cpp  imu.cpp  led.cpp  locomotion.cpp  odometry.cpp  rotary_sensor.cpp  storage.cpp  timer.cpp  torque_sensor.cpp  torque_sensors.cpp
src/proxy/: argb.cpp  battery.cpp  bluetooth_serial.cpp  button.cpp  buzzer.cpp  dip_switch.cpp  distance_sensors.cpp  fan.cpp  imu.cpp  led.cpp  locomotion.cpp  motor.cpp  odometry.cpp  rotary_sensor.cpp  stopwatch.cpp  storage.cpp  torque_sensors.cpp  wall_sensors.cpp
tests/include/: test_core.hpp
tests/src/: test_core.cpp
